crates/openlaser-prep/tests/snapshots/prepare__bridged_holes_nearest_first.snap
---
source: crates/openlaser-prep/tests/prepare.rs
expression: "render(&openlaser_prep::prepare(&plate(), &features).unwrap())"
---
contour from [2]: layer "0", depth 1, closed, length 31.4159
  arc centre (80.0000, 30.0000) radius 5.0000 from 0.0000 rad sweep 6.2832 rad
contour from [1, 3]: layer "0", depth 1, closed, length 119.2088
  arc centre (20.0000, 30.0000) radius 5.0000 from 0.2014 rad sweep 5.8805 rad
  line (24.8990, 29.0000) -> (35.1010, 29.0000)
  arc centre (40.0000, 30.0000) radius 5.0000 from 3.3430 rad sweep 1.3694 rad
  line (40.0000, 25.0000) -> (60.0000, 25.0000)
  arc centre (60.0000, 30.0000) radius 5.0000 from -1.5708 rad sweep 3.1416 rad
  line (60.0000, 35.0000) -> (40.0000, 35.0000)
  arc centre (40.0000, 30.0000) radius 5.0000 from 1.5708 rad sweep 1.3694 rad
  line (35.1010, 31.0000) -> (24.8990, 31.0000)
contour from [0]: layer "0", depth 0, closed, length 320.0000
  line (100.0000, 60.0000) -> (0.0000, 60.0000)
  line (0.0000, 60.0000) -> (0.0000, 0.0000)
  line (0.0000, 0.0000) -> (100.0000, 0.0000)
  line (100.0000, 0.0000) -> (100.0000, 60.0000)
